<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--翻译fragment-->
    <string name="app_name">毕设App</string>
    <string name="TabLayout_Title_Translate">翻译</string>
    <string name="MainActivity_Title">翻译</string>
    <string name="Chinese_language">中  文</string>
    <string name="Automatic_language">自动检测</string>
    <string name="English_language">英  语</string>
    <string name="Japanese_language">日  语</string>
    <string name="Korean_language">韩  语</string>
    <string name="Portugal_language">葡萄牙语</string>
    <string name="Start_input_string">点击开始输入文字</string>
    <string name="Translate_information">这里用来放置详细翻译结果</string>
    <string name="change_Language_Log">成功修改语言为：</string>
    <string name="inquiring_dialog">正在查询...</string>
    <string name="history_query">历史搜索</string>
    <!--商城fragment-->
    <string name="TabLayout_Title_shopping">商场</string>
    <string name="scanning_item">扫一扫</string>
    <string name="query_stories_EditText">请输入要搜索的商品</string>
    <!--小应用-->
    <string name="TabLayout_Title_apply">应用</string>
    <string name="video_item_title">视频翻译</string>
    <string name="online_service_title">在线客服</string>
    <!--我的fragment-->
    <string name="TabLayout_Title_User">我的</string>
    <string name="Money_item">我的余额</string>
    <string name="Message_item">我的消息</string>
    <string name="DownLoad_item">下载离线包</string>
    <string name="Mine_Title">我的</string>
    <string name="Welcome">欢迎,</string>
    <string name="Sign_up">请登录</string>
    <string name="Edit_information">编辑资料</string>
    <!--设置Activity-->
    <string name="Setting_item">设置</string>
    <string name="Automatic_updates_item">自动更新</string>
    <string name="Language_switching_item">语种切换</string>
    <string name="Exchange_language_Chinese_item">简体中文</string>
    <string name="Exchange_language_English_item">English</string>
    <string name="Automatic_updates_information">在连接Wifi下,自动更新软件</string>
    <string name="Language_switching_information">选择适合你的语种</string>
    <string name="Exit_the_current_account">退出当前账号</string>
    <!--语音-->
    <string name="speaking_dialog">正在说话...</string>
    <string name="Finish">结束</string>
    <string name="select_Input_Language_Dialog_Title">请选择你输入语言?</string>
    <!--登录界面-->
    <string name="Login_button">登录</string>
    <string name="User_EditText">账号</string>
    <string name="Password_EditText">密码</string>
    <string name="forgetPsw_TextView">忘记密码?</string>
    <string name="register_TextView">新用户注册</string>
    <string name="check_Information">登录失败，请检查信息是否正确</string>
    <!--注册界面-->
    <string name="phone_EditText">账号</string>
    <string name="e_mail_EditText">邮箱</string>
    <string name="password_EditText">密码</string>
    <string name="sure_password_EditText">确认密码</string>
    <string name="register_button">注册</string>
    <!--拍照-->
    <string name="Please_choose_the_following_way">请选择以下方式</string>
    <string name="Take_photo">拍照</string>
    <string name="Choose_from_the_album">从相册中选择</string>
    <string name="Cancel">取消</string>
    <!--视频-->
    <string name="hang_up_Label">挂断</string>
    <string name="link_waiting_Label">正在连线，请等待...</string>
    <!--消息-->
    <string name="no_message_now">当前暂无任何消息</string>
    <!--下载-->
    <string name="no_download_now">当前没有下载包</string>
    <!--商品界面-->
    <string name="downPrice_Label">降价通知</string>
    <string name="care_Label">关注</string>
    <string name="promotion_goods_Label">促销</string>
    <string name="feedBack_goods_Label">返利</string>
    <string name="whiteBar_goods_Label">白条</string>
    <string name="selected_goods_Label">已选</string>
    <string name="arrived_goods_Label">送至</string>
    <string name="weight_goods_Label">重量</string>
    <string name="more_goods_Label">···</string>
    <string name="contact_service_goods_Label">联系客服</string>
    <string name="stories_goods_Label">店铺</string>
    <string name="shopping_goods_Label">购物车</string>
    <string name="add_shopping_Label">加入购物车</string>
    <string name="remark_goods_Label">评论</string>
    <string name="question_and_answer_Label">问答</string>
    <string name="see_all_remark_Label">查看全部评论</string>
    <string name="see_all_question_Label">查看所有提问</string>
    <string name="good_remark_rate">好评率</string>
    <string name="question_and_answer_sum">条问答</string>
    <!--fontawesome-->
    <string name="TabLayout_Icon_Translate">&#xf1ab;</string>
    <string name="TabLayout_Icon_User">&#xf007;</string>
    <string name="exchange_Icon">&#xf0ec;</string>
    <string name="camera_Icon">&#xf030;</string>
    <string name="microphone_Icon">&#xf130;</string>
    <string name="money_Icon">&#xf157;</string>
    <string name="setting_Icon">&#xf013;</string>
    <string name="download_Icon">&#xf019;</string>
    <string name="message_Icon">&#xf10e;</string>
    <string name="pay_Icon">&#xf02a;</string>
    <string name="right_Icon">&#xf105;</string>
    <string name="enter_Icon">&#xf002;</string>
    <string name="voice_Icon">&#xf028;</string>
    <string name="TabLayout_Icon_shopping">&#xf07a;</string>
    <string name="password_Icon">&#xf084;</string>
    <string name="look_password_Icon">&#xf06e;</string>
    <string name="E_Mail_Icon">&#xf0e0;</string>
    <string name="phone_Icon">&#xf095;</string>
    <string name="scanning_market_Icon">&#xe60c;</string>
    <string name="query_market_Icon">&#xe612;</string>
    <string name="camera_market_Icon">&#xe604;</string>
    <string name="TabLayout_Icon_Apply">&#xf009;</string>
    <string name="online_service_Icon">&#xe621;</string>
    <string name="video_translate_Icon">&#xe64e;</string>
    <string name="camera_exchange_Icon">&#xe6f9;</string>
    <string name="phone_end_Icon">&#xe678;</string>
    <string name="no_message_Icon">&#xe6ad;</string>
    <string name="back_Icon">&#xe625;</string>
    <string name="share_Icon">&#xe624;</string>
    <string name="good_Icon">&#xe644;</string>
    <string name="shopping_icon">&#xe7d6;</string>
    <string name="China_money_Icon">&#xe505;</string>
    <string name="downPrice_Icon">&#xf01d9;</string>
    <string name="care_Icon">&#xf00fd;</string>
    <string name="more_Icon">&#xe719;</string>
    <string name="contact_service_Icon">&#xe7e2;</string>
    <string name="service_goods_Icon">&#xe627;</string>
    <string name="stories_Icon">&#xe7b8;</string>
    <string name="right_goods_Icon">&#xe62d;</string>
    <string name="question_Icon">&#xe762;</string>
    <string name="picture_Icon">&#xe620;</string>
    <string name="qq_share_Icon">&#xe65e;</string>
    <string name="wx_share_Icon">&#xe73c;</string>
    <string name="friend_share_Icon">&#xe73b;</string>
    <string name="wb_share_Icon">&#xe73d;</string>
    <!--图片TAG-->
    <item name="img_tag" type="id"></item>
</resources>

