<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/back_message_tv"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingLeft="10dp"
                android:text="@string/back_Icon"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/Message_item"
                android:textColor="@android:color/white"
                android:textSize="19dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/noMessage_Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_message_Icon"
                android:textSize="70dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/gray_soft"/>
            <TextView
                android:id="@+id/noMessage_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_message_now"
                android:textSize="18dp"/>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>