<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/b2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/phone_Icon"/>
            <EditText
                android:id="@+id/phone_register_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:cursorVisible="false"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textAlignment="center"
                android:textSize="18dp"
                android:hint="@string/phone_EditText"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#939393" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/eMail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/E_Mail_Icon"/>
            <EditText
                android:id="@+id/mail_register_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:cursorVisible="false"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textAlignment="center"
                android:textSize="18dp"
                android:hint="@string/e_mail_EditText"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#939393" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/password_Icon"/>
            <EditText
                android:id="@+id/password_register_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:cursorVisible="false"
                android:background="@null"
                android:textAlignment="center"
                android:textSize="18dp"
                android:hint="@string/password_EditText"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/eye_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_password_Icon"
                android:paddingRight="5dp"
                android:textSize="16dp" />
        </LinearLayout>
        <Button
            android:id="@+id/register_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bg"
            android:text="@string/register_button"
            android:textColor="@android:color/white"
            android:textSize="25dp" />
    </LinearLayout>
</LinearLayout>                                                                                                                                                                                                                                                                                                                                                                                                                                    