<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/back_download_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingLeft="10dp"
            android:text="@string/back_Icon"
            android:textColor="@android:color/white"
            android:textSize="17dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/DownLoad_item"
            android:textColor="@android:color/white"
            android:textSize="19dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noDownLoad_Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/download_Icon"
            android:textColor="@color/gray_soft"
            android:textSize="70dp" />

        <TextView
            android:id="@+id/noDownLoad_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_download_now"
            android:textSize="18dp" />
    </LinearLayout>


</LinearLayout>                                                                                                                                                                                                                                                                                                                                                                                                                                    