<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_Input_Language_Dialog_Title"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_margin="10dp"
            android:paddingLeft="7dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/cn_bt"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/Chinese_language"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:background="@drawable/button_bg"
                android:layout_marginRight="25dp"/>
            <Button
                android:id="@+id/en_bt"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/English_language"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:background="@drawable/button_bg"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
