<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/header"
            layout="@layout/navigation_layout"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal">
                <!--登录头像-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="20dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@mipmap/user"
                        app:civ_border_width="0dp"
                        app:civ_border_color="#bcbcbc"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sign_up"
                        android:textSize="14dp"
                        android:textColor="@android:color/black"/>
                    <Button
                        android:id="@+id/reserve_bt"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:text="@string/Edit_information"
                        android:textSize="13dp"
                        android:background="@drawable/button_bg"
                        android:textColor="@color/bg_White"/>
                </LinearLayout>

            </LinearLayout>
            <!--水平线-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/gray_soft_bg"></LinearLayout>
            <!--个人中心item-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!--我的余额-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/money_tv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:textSize="16dp"
                        android:textColor="@color/list_icon"
                        android:text="@string/money_Icon"/>
                    <TextView
                        android:id="@+id/money_tv"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/Money_item"
                        android:textColor="@android:color/black"
                        android:textSize="16dp" />
                    <TextView
                        android:id="@+id/information1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_Icon"
                        android:textSize="18dp"
                        android:paddingRight="20dp"/>
                </LinearLayout>
                <!--水平线-->
                <include
                    layout="@layout/horizontal_line"/>
                <!--我的余额-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/message_tv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:textSize="15dp"
                        android:textColor="@color/list_icon"
                        android:text="@string/message_Icon"/>
                    <TextView
                        android:id="@+id/message_tv"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/Message_item"
                        android:textColor="@android:color/black"
                        android:textSize="16dp" />
                    <TextView
                        android:id="@+id/information2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_Icon"
                        android:textSize="18dp"
                        android:paddingRight="20dp"/>
                </LinearLayout>
                <!--水平线-->
                <include
                    layout="@layout/horizontal_line"/>
                <!--我的余额-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/download_tv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:textSize="15dp"
                        android:textColor="@color/list_icon"
                        android:text="@string/download_Icon"/>
                    <TextView
                        android:id="@+id/download_tv"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/DownLoad_item"
                        android:textColor="@android:color/black"
                        android:textSize="16dp" />
                    <TextView
                        android:id="@+id/information3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_Icon"
                        android:textSize="18dp"
                        android:paddingRight="20dp"/>
                </LinearLayout>
                <!--水平线-->
                <include
                    layout="@layout/horizontal_line"/>
                <!--我的余额-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/setting_tv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:textSize="16dp"
                        android:textColor="@color/list_icon"
                        android:text="@string/setting_Icon"/>
                    <TextView
                        android:id="@+id/setting_tv"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/Setting_item"
                        android:textColor="@android:color/black"
                        android:textSize="16dp" />
                    <TextView
                        android:id="@+id/information4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_Icon"
                        android:textSize="18dp"
                        android:paddingRight="20dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>