<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/TabLayout_Title_apply"
            android:textColor="@android:color/white"
            android:textSize="19dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/video_bt"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_apply"
                    android:text="@string/video_translate_Icon"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/video_item_title"
                    android:gravity="center"
                    android:textSize="13dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/service_bt"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_apply"
                    android:text="@string/online_service_Icon"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/online_service_title"
                    android:gravity="center"
                    android:textSize="13dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
            <Button
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible"
                android:text="开启视频"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>