<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:background="@drawable/dialog_bg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/voice_dialog"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="!!"
            android:gravity="center"
            android:textSize="40dp"
            android:textColor="@color/colorPrimary" />
        <Chronometer
            android:id="@+id/voice_ch"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speaking_dialog"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/cancel_bt"
                android:layout_width="57dp"
                android:layout_height="25dp"
                android:textSize="14dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:layout_marginRight="5dp"
                android:text="@string/Cancel"/>
            <Button
                android:id="@+id/finish_bt"
                android:layout_width="57dp"
                android:layout_height="25dp"
                android:textSize="14dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:text="@string/Finish"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
